--- a/index.html
+++ b/index.html
@@ -3,9 +3,184 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    
     <title>ArchiWeb</title>
 </head>
 <body>
+    <section class="header">
+        <div class="container">
+            <div class="header__flex">
+                <div class="logo-block">
+                    <h2 class="logo">ArchiWeb</h2>
+                </div>
+                <nav>
+                    <ul class="header-menu">
+                        <li><a href="/">Home</a></li>
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+                <a href="#" class="search"><i class="fa fa-search" aria-hidden="true"></i></a>
+            </div>
+            </div>
+    </section>
+    <section class="solution">
+        <img src="img/header.png" alt="solution" class="img-block">
+        <div class="container">
+            <div class="solution-item">
+                <div class="text-h2">best solution for your home</div>
+                <p class="text-p">Lorem ipsum dolor sit amet, 
+                    consectetur adipiscing elit ut 
+                    aliquam, purus sit amet </p>
+            </div>
+        </div>
+    </section>
+    <section class="services">
+        <div class="container">
+            <h2 class="text-h2">Our Services</h2>
+            <div class="services__flex">
+                <div class="services__flex-item">
+                    <div class="services-img">
+                        <img src="img/list.svg" alt="">
+                    </div>
+                    <h3 class="text-h3">Planning</h3>
+                    <p class="tetx-p">Our Services Line one
+                        Servive line two</p>
+                </div>
+                <div class="services__flex-item">
+                    <div class="services-img">
+                        <img src="img/Home.svg" alt="">
+                    </div>
+                    <h3 class="text-h3">Interior</h3>
+                    <p class="tetx-p">Our Services Line one
+                        Servive line two</p>
+                </div>
+                <div class="services__flex-item">
+                    <div class="services-img">
+                        <img src="img/pens.svg" alt="">
+                    </div>
+                    <h3 class="text-h3">Exterior</h3>
+                    <p class="tetx-p">Our Services Line one
+                        Servive line two</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="aboutus">
+        <div class="container">
+            <div class="aboutus__flex">
+                <img src="img/about_us.png" alt="">
+                <div class="text-block">
+                    <h2 class="text-h2">About Us</h2>
+                    <p class="text-p">Lorem ipsum dolor sit amet, 
+                        consectetur adipiscing elit ut 
+                        aliquam, purus sit amet luctus 
+                        venenatis, lectus magna fringilla 
+                        urna, porttitor</p>
+                    <a href="#" class="btn">Read more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="project">
+        <div class="container">
+            <h2 class="text-h2">Our Projects</h2>
+            <div class="projects__grid">
+                <div class="projects__grid-item">
+                    <img src="img/project1.png" alt="">
+                    <p class="text-p">Our Services Line one
+                        Servive line two</p>
+                </div>
+                <div class="projects__grid-item">
+                    <img src="img/project2.png" alt="">
+                    <p class="text-p">Our Services Line one
+                        Servive line two</p>
+                </div>
+                <div class="projects__grid-item">
+                    <img src="img/project3.png" alt="">
+                    <p class="text-p">Our Services Line one
+                        Servive line two</p>
+                </div>
+                <div class="projects__grid-item">
+                    <img src="img/project4.png" alt="">
+                    <p class="text-p">Our Services Line one
+                        Servive line two</p>
+                </div>
+
+                <div class="projects__grid-item">
+                    <img src="img/project5.png" alt="">
+                    <p class="text-p">Our Services Line one
+                        Servive line two</p>
+                </div>
+
+                <div class="projects__grid-item">
+                    <img src="img/project6.png" alt="">
+                    <p class="text-p">Our Services Line one
+                        Servive line two</p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <section class="testimonial">
+        <div class="container">
+            <h2 class="text-h2">Testimonial</h2>
+            <div class="testimonial__flex">
+                <div class="testimonial__flex-item">
+                    <img src="img/avatar1.png" alt="">
+                    <div class="person-block">
+                        <h3 class="text-h3">James Passaquindici Arcand</h3>
+                        <p class="text-p">Lorem ipsum dolor sit amet, 
+                            consecteturadipiscing elit ut<br>  
+                            aliquam, purus sit amet luctus venenatis</p>
+                    </div>
+                </div>
+                <div class="testimonial__flex-item block-right">
+                    <img src="img/avatar2.png" alt="">
+                    <div class="person-block">
+                        <h3 class="text-h3">Abram Schleifer</h3>
+                        <p class="text-p">Lorem ipsum dolor sit amet, 
+                            consectetur adipiscing elit ut<br>
+                            aliquam, purus sit amet luctus venenatis</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__flex">
+                <div class="footer__flex-item">
+                    <div class="logo-block">
+                        <h2 class="logo">ArchiWeb</h2>
+                        <p class="text-p"></p>
+                        <div class="cosial">
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer__flex-item"></div>
+                    <h4 class="text-h4">Articles</h4>
+                    <ul class="arcticles">
+                        <li>7 Tips for Kids Friendly 
+                            Interior Design</li>
+                        <li>Smart Tips for Changing 
+                            a Room</li>
+                        <li>Eco-friendly design</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
