--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 </div>
                 <nav>
                     <ul class="header-menu">
-                        <li><a href="/">Home</a></li>
+                        <li class="menu-width"><a href="/">Home</a></li>
                         <li><a href="#">Projects</a></li>
-                        <li><a href="#">About</a></li>
+                        <li class="menu-width"><a href="#">About</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
@@ -161,14 +161,17 @@
                 <div class="footer__flex-item">
                     <div class="logo-block">
                         <h2 class="logo">ArchiWeb</h2>
-                        <p class="text-p"></p>
+                        <p class="text-p">Archiweb is an architectural consultant based in Berlin, Germany. We provide solutions for your architecture and residential design
+                        </p>
                         <div class="cosial">
-
+                            <i class="fa fa-facebook-f facebook" aria-hidden="true"></i>
+                            <i class="fa fa-twitter twitter" aria-hidden="true"></i>
+                            <i class="fa fa-instagram instagram" aria-hidden="true"></i>
                         </div>
                     </div>
                 </div>
 
-                <div class="footer__flex-item"></div>
+                <div class="footer__flex-item block-margin">
                     <h4 class="text-h4">Articles</h4>
                     <ul class="arcticles">
                         <li>7 Tips for Kids Friendly 
@@ -177,6 +180,12 @@
                             a Room</li>
                         <li>Eco-friendly design</li>
                     </ul>
+                </div>
+                <div class="footer__flex-item">
+                    <div class="text-h4 map-title">
+                        Location
+                    </div>
+                    <iframe class="footer-map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1010.5122593334922!2d150.81024631002802!3d59.566000015771905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1729056710314!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
