--- a/index.html
+++ b/index.html
@@ -28,7 +28,17 @@
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
-                <a href="#" class="search"><i class="fa fa-search" aria-hidden="true"></i></a>
+
+                <div class="header-btn">
+                    <a href="#" class="search"><i class="fa fa-search" aria-hidden="true"></i></a>
+                    <div class="burger">
+                        <span class="burger-line"></span>
+                        <span class="burger-line"></span>
+                        <span class="burger-line"></span>
+                    </div>
+                </div>
+                
+                
             </div>
             </div>
     </section>
